testfx/errors/error_tests/edge_35_empty_blocks.fx
// 空块和奇怪结构
if () {}
for () {}
while () {}
try {} catch () {}

L> () {}
if (true) {} {}
